mdapipkg/objects/M2MX_Skillset_Search_Objects__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Captures list of objects to search against using SOSL and for required skillsets</description>
    <fields>
        <fullName>API_Name__c</fullName>
        <description>API Name of the object</description>
        <inlineHelpText>API Name of the object</inlineHelpText>
        <label>API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MultiselectPicklist_Field_API_Name__c</fullName>
        <description>Will store comma separated multi select field API names.</description>
        <label>MultiselectPicklist Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Field_API_Name__c</fullName>
        <label>Text Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>M2MX Skillset Search Objects</label>
</CustomObject>